style: fix layout bugs

--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -91,3 +91,8 @@ input[type="search"]:focus {
     border-bottom: 1px solid #fd9ec3;
   }
 }
+
+.nav-link-header:hover {
+  text-decoration: none;
+  color: #7d2849;
+}
