--- a/src/components/QuickLinks/QuickLinks.css
+++ b/src/components/QuickLinks/QuickLinks.css
@@ -1,5 +1,5 @@
 .nav {
-  width: 100%;  
+  width: 100%;
   height: 50px;
   margin: 0 auto;
 }
@@ -7,10 +7,13 @@
 ul {
   list-style-type: none;
 }
-.nav-link a:active {
-  color: #FA98AF;
+
+.quicklink-item:hover {
+  color: #fa98af;
 }
-.a{
+
+.quicklink-item {
   justify-content: center;
-  align-items: center
+  align-items: center;
+  color: #000;
 }
